--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
   "name": "browserify-es6-builder",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/build.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "bin": {
+    "browserify-es6-builder": "./bin/cli.js"
+  },
+  "author": "Tyler Olson",
   "license": "ISC",
   "dependencies": {
     "babel-core": "^5.8.21",
-    "babel-eslint": "^4.0.5",
     "babelify": "^6.1.3",
     "browserify": "^11.0.1",
-    "browserify-shim": "^3.8.10",
-    "eslint": "^0.24.1",
-    "eslint-config-airbnb": "0.0.6",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-util": "^3.0.6",
-    "vinyl-source-stream": "^1.1.0"
+    "yargs": "^3.25.0"
   }
 }
